cmake_minimum_required (VERSION 3.0)
project (SDAS-API)
set(CMAKE_BUILD_TYPE RelWithDebInfo)
set(CMAKE_C_FLAGS "-std=c99 ${CMAKE_C_FLAGS}")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_definitions(-DH5_BUILT_AS_DYNAMIC_LIB )
add_executable(SDAS_stream_h5 pfdas_stream_h5.c pfdas_hdf5.c pfdas_hdf5.h PFDAS_packet_types.h PFDAS_api.h PFDAS_fpga_payload.c PFDAS_fpga_payload.h)
add_executable(SDAS_export_h5 pfdas_export_h5.c pfdas_hdf5.c pfdas_hdf5.h PFDAS_packet_types.h PFDAS_api.h PFDAS_fpga_payload.c PFDAS_fpga_payload.h)
target_link_libraries(SDAS_stream_h5 sdas-api-1 hdf5)
target_link_libraries(SDAS_export_h5 sdas-api-1 hdf5)
